test/fails/bad_tags/add3.lgl
void main() {
    tag a is vec2;
    tag b is vec2;

    a->a x = [[1., 2.], [1., 2.]];
    a->b y = [[1., 2.], [1., 2.]];
    a->b bad = x + y; // Can't downcast after addition
}
